--- a/public/index.html
+++ b/public/index.html
@@ -47,9 +47,9 @@
       async
       defer
     ></script>
-    <!-- <script
+    <script
       src="//code.tidio.co/sokfoib8mhumwigixnqduiaruav2xxvk.js"
       async
-    ></script> -->
+    ></script>
   </body>
 </html>
